NetBSD Problem Report #56946

From martin@aprisoft.de  Fri Jul 29 10:57:17 2022
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id AA5D91A921F
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 29 Jul 2022 10:57:17 +0000 (UTC)
Message-Id: <20220729105708.A2E265CC975@emmas.aprisoft.de>
Date: Fri, 29 Jul 2022 12:57:08 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: uslsa(4) seems to not work on big endian machines
X-Send-Pr-Version: 3.95

>Number:         56946
>Category:       kern
>Synopsis:       uslsa(4) seems to not work on big endian machines
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jul 29 11:00:00 +0000 2022
>Closed-Date:    Sun Jul 31 06:29:46 +0000 2022
>Last-Modified:  Mon Aug 01 09:40:03 +0000 2022
>Originator:     Martin Husemann
>Release:        NetBSD 9.99.99
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD big-apple.aprisoft.de 9.99.99 NetBSD 9.99.99 (POWERMAC_G5.MP) #65: Thu Jul 28 16:26:57 CEST 2022 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/macppc/compile/POWERMAC_G5.MP macppc
Architecture: powerpc
Machine: macppc
>Description:

From experiecnce with a tiny, non representative sample of two machines
(macppc, sparc64) and a single device (odriod console adapter) it seems
that uslsa(4) does not work on big endian machines. The same setup
works fine with an amd64 notebook runing current from the same sources.

>How-To-Repeat:
Try to use serial console of some other machine connected via ucom @ uslsa

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Rin Okuyama" <rin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56946 CVS commit: src/sys/dev/usb
Date: Fri, 29 Jul 2022 13:07:15 +0000

 Module Name:	src
 Committed By:	rin
 Date:		Fri Jul 29 13:07:15 UTC 2022

 Modified Files:
 	src/sys/dev/usb: uslsa.c

 Log Message:
 PR kern/56946

 Baud rate must be in little endian for SLSA_R_SET_BAUDRATE request.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.32 src/sys/dev/usb/uslsa.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: rin@NetBSD.org
State-Changed-When: Fri, 29 Jul 2022 13:11:06 +0000
State-Changed-Why:
uslsa.c,v 1.32 fixes the problem for me. Can you confirm please?


State-Changed-From-To: feedback->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 31 Jul 2022 06:29:46 +0000
State-Changed-Why:
Confirmed working, thanks for the quick fix!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56946 CVS commit: [netbsd-9] src/sys/dev/usb
Date: Mon, 1 Aug 2022 09:36:07 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Aug  1 09:36:06 UTC 2022

 Modified Files:
 	src/sys/dev/usb [netbsd-9]: uslsa.c

 Log Message:
 Pull up following revision(s) (requested by rin in ticket #1483):

 	sys/dev/usb/uslsa.c: revision 1.32

 PR kern/56946
 Baud rate must be in little endian for SLSA_R_SET_BAUDRATE request.


 To generate a diff of this commit:
 cvs rdiff -u -r1.28 -r1.28.2.1 src/sys/dev/usb/uslsa.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56946 CVS commit: [netbsd-8] src/sys/dev/usb
Date: Mon, 1 Aug 2022 09:38:02 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Aug  1 09:38:02 UTC 2022

 Modified Files:
 	src/sys/dev/usb [netbsd-8]: uslsa.c

 Log Message:
 Pull up following revision(s) (requested by rin in ticket #1753):

 	sys/dev/usb/uslsa.c: revision 1.32

 PR kern/56946
 Baud rate must be in little endian for SLSA_R_SET_BAUDRATE request.


 To generate a diff of this commit:
 cvs rdiff -u -r1.23 -r1.23.8.1 src/sys/dev/usb/uslsa.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.