PR kern/56946

Baud rate must be in little endian for SLSA_R_SET_BAUDRATE request.